test/pass/lambdas/lambda_infer_noreturn.lily
define f(g: Function(Integer, Integer))
{
    g(1, 2)
}

f((|a, b| a + b))
